--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.10.1",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.10.0"
   }
 }
